<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general -->
    <string name="app_name">Voice Pitch Analyzer</string>

    <!-- settings -->
    <string name="preference_file_key" translatable="false">preferences.conf</string>
    <string name="saved_text_number" translatable="false">text-number</string>
    <string name="first_start" translatable="false">first-start</string>

    <!-- recording overview -->
    <string name="undo">Undo</string>
    <string name="record_deleted">Record deleted</string>
    <string name="empty">Please record something by pressing the microphone icon in the upper right corner.</string>

    <!-- new recording activity/fragment -->
    <string name="title_activity_recording">New Recording</string>
    <string name="record">Record</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="title_text">Text</string>
    <string name="realtime_graph">Real-Time Graph</string>
    <string name="recording_tab_index" translatable="false">recording_tab_index</string>

    <!-- recording analysis -->
    <string name="title_section1">Overview</string>
    <string name="title_section2">Pitch over Time</string>
    <string name="title_section3">Details</string>
    <string name="min_max_avg">Min Avg: %1$sHz, Max Avg: %2$sHz, Average: %3$sHz</string>
    <string name="average">General Average</string>
    <string name="min_avg">Minimum Average</string>
    <string name="max_avg">Maximum Average</string>
    <string name="male_range">Male Range</string>
    <string name="female_range">Female Range</string>
    <string name="androgynous_range">Androgynous Range</string>
    <string name="your_range">Your Range</string>
    <string name="personal_range">Your range sounds mostly</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="in_between">in between</string>
    <string name="unknown">unknown</string>
    <string name="pitch_max">Maximum</string>
    <string name="pitch_min">Minimum</string>
    <string name="pitch_max_avg">Maximum Average</string>
    <string name="pitch_min_avg">Minimum Average</string>

    <!-- about fragment -->
    <string name="action_about">About</string>
    <string name="title_activity_about">About Voice Pitch Analyzer</string>
    <string name="about" translatable="false">Purr Programming</string>
    <string name="programming">Programming</string>
    <string name="design" translatable="false">Design</string>
    <string name="programming_persons" translatable="false"><a href="https://twitter.com/LilithWittmann">Lilith Wittmann</a> &amp; <a href="https://github.com/puerile">Yuri Ichijō</a></string>
    <string name="design_persons" translatable="false"><a href="https://github.com/puerile">Yuri Ichijō</a></string>
    <string name="libraries">Voice Pitch Analyzer uses the following libraries:</string>
    <string name="mpandroidchart" translatable="false">MPAndroidChart</string>
    <string name="apache_licence" translatable="false"><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a></string>
    <string name="tarsos_dsp" translatable="false">TarsosDSP</string>
    <string name="gpl" translatable="false"><a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL 3.0</a></string>
    <string name="jodatime" translatable="false">Joda Time</string>
    <string name="contributors">Contributors</string>
    <string name="programming_contributors" translatable="false"><a href="https://github.com/m-abboud">Maddie Abboud</a>, <a href="https://github.com/jessa0">Jessa</a></string>
    <string name="translation">Translation</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="portuguese">Portuguese</string>
    <string name="italian">Italian</string>
    <string name="dutch">Dutch</string>
    <string name="aurora_viana" translatable="false">Aurora Viana</string>
    <string name="joelle_van_essen" translatable="false"><a href="https://github.com/JoCodesThings">Joëlle van Essen</a></string>
    <string name="text_origin">All texts from »The Picture of Dorian Gray« by Oscar Wilde</string>
    <string name="github" translatable="false"><a href="https://github.com/purrprogramming/voice-pitch-analyzer">GitHub</a></string>

    <!-- start screen -->
    <string name="welcome">Hey there!</string>
    <string name="explanation">To properly analyse it, we need about one minute of audio recording of your voice. For this purpose, we’ll provide you with a text of a length approximate to this time frame. Of course you’re free to say anything else, too, as long as it’s in your natural voice.</string>
    <string name="microphone">To produce meaningful analysing results, it’s best to use a headset or other external microphone.</string>
    <string name="results">When you’re finished, press »stop« to see your results. On the result page you’ll find a graph showing the typical ›male‹ and ›female‹ pitch ranges (in violet), along with your own (in grey). You’ll notice the ›male‹ and ›female‹ ranges are overlapping each other a bit, denoting a range that can be perceived as either gender.</string>
    <string name="next">Next</string>

    <!-- error messages -->
    <string name="device_sample_rate_not_supported">Microphone not supported yet. The developers have been informed.</string>
    <string name="device_sample_rate_not_supported_title">Microphone not supported</string>

    <!-- permission request -->
    <string name="mic_permission_explanation">In order to record your voice, you need to give Voice Pitch Analyzer permission to access this device\'s microphone.</string>
    <string name="settings">Settings</string>
    <string name="mic_permission_title">Microphone access required</string>

    <!-- progress -->
    <string name="progress">Pitch</string>
    <string name="title_activity_progress">Overall Progress</string>
    <string name="recording">Recording</string>
    <string name="none">None</string>
</resources>
